overall website content change hero section background realign main page sections

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -3,6 +3,11 @@
   display: flex;
   align-items: center;
   min-height: 700px;
+
+  background-image: url('../public/background.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @media (max-width: 600px) {
