--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   min-height: 700px;
 
+  background-color: #111;
   background-image: url('../public/background.jpg');
   background-position: center;
   background-size: cover;
