--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -4,17 +4,24 @@
   align-items: center;
   min-height: 700px;
 
-  background-color: #111;
-  background-image: url('../public/background.jpg');
+  /* background-color: #111;
+  background-image: url('../public/output.gif');
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
 }
 
 @media (max-width: 600px) {
   .hero {
     min-height: 600px;
   }
+}
+
+.video_bg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: 50%;
 }
 /* .container {
   min-height: 100vh;
