--- a/styles/home.scss
+++ b/styles/home.scss
@@ -19,10 +19,15 @@
             line-height: 1.1;
         }
     }
+}
 
-    span {
-        // color: black;
-    }
+.hero-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
 }
 
 #why {
