--- a/styles/home.scss
+++ b/styles/home.scss
@@ -7,6 +7,7 @@
         color: white;
         font-weight: 600;
         margin-top: 40px;
+        text-shadow: 2px 2px 2px #444;
         @media #{$lg}{
             font-size: 50px;
         }
@@ -18,6 +19,10 @@
             font-size: 32px;
             line-height: 1.1;
         }
+    }
+
+    span {
+        text-shadow: 2px 2px 2px #000;
     }
 }
 
@@ -63,4 +68,8 @@
 
 .main {
     margin-top: 82px;
+}
+
+.test-text > p{
+    color: #444444;
 }
