--- a/styles/home.scss
+++ b/styles/home.scss
@@ -109,3 +109,44 @@
 .service-icon.service-icon--profile {
     background-image: url('../public/lab-report.png');
 }
+
+#marquee {
+    margin-top: 2em;
+    height:200px; 
+    width: 100%;
+    position:relative; 
+    overflow:hidden;
+    background-color: white;
+}
+  
+.photobanner {
+    position:absolute; 
+    top:0px; 
+    left:0px; 
+    overflow:hidden; 
+    white-space: nowrap;
+    animation: bannermove 5s linear infinite;
+    display: flex;
+    flex-direction: row;
+}
+
+.photobanner img {
+    margin: 0 0.5em;
+}
+
+.img-wrapper {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@keyframes bannermove {
+    0% {
+        transform: translate(0, 0);
+    }
+    100% {
+        transform: translate(-100%, 0);
+    }
+}
