--- a/styles/home.scss
+++ b/styles/home.scss
@@ -45,6 +45,8 @@
     font-weight: 400;
     position: relative;
     padding-left: 20px;
+    color: #444444;
+
 }
 
 .service-info p:first-child:before {
@@ -55,6 +57,7 @@
     left: 0;
     background: #fa5b0f;
     top: 3px;
+    color: #444444;
 }
 
 .about-info > .border-left-1{
@@ -64,14 +67,20 @@
     display: inline-block;
     position: relative;
     top: 1px;
+    color: #444444;
 }
 
+.about-info {
+
+    font-size: 18px;
+    color: #444444;
+}
 .main {
     margin-top: 82px;
 }
 
 .test-text > p{
-    color: #444444;
+   color: #444444;
 }
 
 .services-wrapper:hover {
@@ -140,6 +149,23 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.counter-content {
+    color: #444444;
+
+}
+.counter-content span {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.heading-fill {
+    opacity: 0.8;
+}
+
+.test-text p{
+    font-size: 18px;
 }
 
 @keyframes bannermove {
