--- a/styles/home.scss
+++ b/styles/home.scss
@@ -5,7 +5,7 @@
         font-size: 70px;
         margin-bottom: 23px;
         color: white;
-        font-weight: 600;
+        font-weight: bold;
         margin-top: 40px;
         text-shadow: 2px 2px 2px #444;
         @media #{$lg}{
@@ -23,7 +23,17 @@
 
     span {
         text-shadow: 2px 2px 2px #000;
+        font-weight: bold;
     }
+}
+
+.slider-button > .c-btn {
+    font-weight: bold;
+}
+
+.hero-tag-text p {
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #000;
 }
 
 .hero-video {
@@ -38,6 +48,10 @@
 
 #why {
     background-color: $grey-soft;
+}
+
+.section-title h2 {
+    font-weight: bold;
 }
 
 .service-info p {
