gmp-mandatory-testing page images + style

--- a/styles/services.scss
+++ b/styles/services.scss
@@ -10,3 +10,12 @@
 .service--description {
   white-space: pre-wrap;
 }
+
+
+.gmp__testing p {
+  color: black;
+}
+
+.service__img {
+  max-height: 300px;
+}
