--- a/styles/slabo-css/_variables.scss
+++ b/styles/slabo-css/_variables.scss
@@ -26,6 +26,8 @@ $theme-color: #fa5b0f;
 $body-text-color: #7b7b7b;
 $hr-border-color:#eceff8;
 
+$new-body-text-color:#444444;
+
 // Heading Color
 $heading-color: #111111;
 
