--- a/styles/home.scss
+++ b/styles/home.scss
@@ -46,6 +46,18 @@
     background-color: black;
 }
 
+.services{
+   
+        width:100%;
+        height:1000%;
+        //position:center;
+        background: url('../public/cirta_background_logo.png') ;
+
+        background-size: 360px;
+        //background-repeat: no-repeat;
+        background-position: center;
+}
+
 #why {
     background-color: $grey-soft;
 }
