position flag center

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -204,14 +204,15 @@
 
 }
 
-
 // menu
 .menu-close {
     cursor: pointer;
     color: $theme-color;
 }
 
-
-.flag-vertical-middle {
-    vertical-align: middle;
+.flag-icon {
+    height: 80px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
