--- a/styles/home.scss
+++ b/styles/home.scss
@@ -146,8 +146,7 @@
 }
 
 #marquee {
-    margin-top: 2em;
-    height:200px;
+    height: 150px;
     width: 100%;
     position:relative;
     overflow:hidden;
@@ -170,11 +169,13 @@
 }
 
 .img-wrapper {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .counter-content {
