--- a/styles/home.scss
+++ b/styles/home.scss
@@ -58,6 +58,18 @@
         background-position: center;
 }
 
+
+.contact-page{
+
+        width:100%;
+        height:1000%;
+        //position:center;
+        background: url('../public/cirta_background_logo.png') ;
+
+        background-size: 90px;
+        //background-repeat: no-repeat;
+        background-position: center;
+}
 #why {
     background-color: $grey-soft;
 }
