--- a/styles/home.scss
+++ b/styles/home.scss
@@ -60,18 +60,29 @@
 
 
 .contact-page{
+    width:100%;
+    height:1000%;
+    //position:center;
+    background: url('../public/cirta_background_logo.png') ;
 
-        width:100%;
-        height:1000%;
-        //position:center;
-        background: url('../public/cirta_background_logo.png') ;
-
-        background-size: 90px;
-        //background-repeat: no-repeat;
-        background-position: center;
+    background-size: 90px;
+    //background-repeat: no-repeat;
+    background-position: center;
 }
+
 #why {
     background-color: $grey-soft;
+}
+
+.client-say-icon {
+    width: 85px;
+    max-height: 55px;
+
+    & > img {
+        height: 100%;
+        width: 100%;
+        object-fit: contain;
+    }
 }
 
 .section-title h2 {
@@ -214,7 +225,6 @@
     100% {
         margin-left: -3000px;
     }
-
 }
 
 // menu
