--- a/styles/home.scss
+++ b/styles/home.scss
@@ -31,6 +31,10 @@
     font-weight: bold;
 }
 
+.hero-tag {
+    z-index: 0;
+}
+
 .hero-tag-text p {
     font-weight: bold;
     text-shadow: 2px 2px 2px #000;
@@ -95,7 +99,7 @@
     font-weight: 400;
     position: relative;
     padding-left: 20px;
-    color: #444444;
+    color: #000000;
 
 }
 
@@ -107,7 +111,7 @@
     left: 0;
     background: #fa5b0f;
     top: 3px;
-    color: #444444;
+    color: #000000;
 }
 
 .about-info > .border-left-1{
@@ -117,20 +121,19 @@
     display: inline-block;
     position: relative;
     top: 1px;
-    color: #444444;
+    color: #000000;
 }
 
 .about-info {
-
     font-size: 18px;
-    color: #444444;
+    color: #000000;
 }
 .main {
     margin-top: 82px;
 }
 
 .test-text > p{
-   color: #444444;
+    color: #000000;
 }
 
 .services-wrapper:hover {
@@ -203,7 +206,7 @@
 }
 
 .counter-content {
-    color: #444444;
+    color: #000000;
 
 }
 .counter-content span {
@@ -212,7 +215,10 @@
 }
 
 .heading-fill {
-    opacity: 0.8;
+    opacity: 1;
+    color: black;
+    -webkit-text-fill-color: black;
+    -webkit-text-stroke-width: unset;
 }
 
 .test-text p{
