--- a/styles/home.scss
+++ b/styles/home.scss
@@ -78,7 +78,7 @@
     background-color: $grey-soft;
 }
 
-.client-say-icon 
+.client-say-icon
 {
     width: 85px;
     max-height: 55px;
@@ -157,7 +157,7 @@
 }
 
 .service-icon.service-icon--hemp-flowery-test {
-    background-image: url('../public/marijuana.png');
+    background-image: url('../public/gmp_mando_logo.png');
 }
 
 .service-icon.service-icon--aflatoxin {
