--- a/styles/slabo-css/_variables.scss
+++ b/styles/slabo-css/_variables.scss
@@ -15,7 +15,7 @@ $white: #ffffff;
 $black: #111111;
 $black-soft: #222222;
 $black-2: #202020;
-$green-bg:#C5F4E0; 
+$green-bg:#C5F4E0;
 $blue: #234969;
 $blue-soft: #005376;
 $grey:#747474;
@@ -23,7 +23,7 @@ $grey-soft:#eef2f5;
 $yellow:#070706;
 $orange:#FF9E2D;
 $theme-color: #fa5b0f;
-$body-text-color: #7b7b7b;
+$body-text-color: #000000;
 $hr-border-color:#eceff8;
 
 $new-body-text-color:#444444;
