--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -7,3 +7,11 @@
 	color: white;
 	font-size: 1rem;
 }
+
+.footer-link-list a {
+    color: white;
+
+    &:hover {
+        color: #fa5b0f;
+    }
+}
